# agentic-event-ledger

./: .env  .gitignore  DESIGN.md  DOMAIN_NOTES.md  README.md  pyproject.toml  regulatory_package_APEX-WHATIF-001.json
scripts/: demo_concurrency.py  demo_gas_town.py  demo_temporal_query.py  demo_upcasting.py  demo_week_standard.py  demo_what_if.py  run_migrations.py
src/: db.py  event_store.py  schema.sql  startup.py
src/aggregates/: agent_session.py  audit_ledger.py  compliance_record.py  loan_application.py
src/commands/: handlers.py
src/integrity/: audit_chain.py  gas_town.py
src/mcp/: dependencies.py  resources.py  server.py  tools.py
src/models/: events.py
src/projections/: agent_performance.py  application_summary.py  base.py  compliance_audit.py  daemon.py
src/regulatory/: package.py
src/upcasting/: registry.py  upcasters.py
src/what_if/: projector.py
tests/: test_aggregates.py  test_concurrency.py  test_gas_town.py  test_mcp_lifecycle.py  test_phase6.py  test_projections.py  test_upcasting.py
