[project]
name = "ledger"
version = "0.1.0"
description = "The Ledger — Agentic Event Store & Enterprise Audit Infrastructure"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "psycopg>=3.2.4",
    "psycopg[binary]>=3.2.4",
    "pydantic>=2.11.2",
    "pydantic-settings>=2.8.1",
    "python-dotenv>=1.2.2",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "fastmcp>=3.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.hatch.build.targets.wheel]
packages = ["src"]
